prevent wrapping inside of buttons, fixes #5745
git-svn-id: svn://develop.studip.de/studip/trunk@34491 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/buttons.less
+++ b/public/assets/stylesheets/less/buttons.less
@@ -50,7 +50,7 @@ a.button, button.button {
 }
 
 .button-with-empty-icon {
-    white-space: normal;
+    white-space: nowrap;
 
     &:before {
         background: no-repeat;
